--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.9"
 
 services:
   citilystbackend:
+    container_name: citilyst_be_prod
     image: genqserve/citilyst-backend:latest
     build:
       context: .
@@ -9,8 +10,10 @@ services:
     ports:
       - "8000:8000"
     environment:
-      DATABASE_URL: ""
-      REDIS_URL: "redis://redis:6379"
+      - DATABASE_URL=${DATABASE_URL}
+      - REDIS_URL=${REDIS_URL}
+      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+      - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
     depends_on:
       - redis
     restart: always
@@ -26,7 +29,6 @@ services:
       - app_network
     restart: always
 
-    
 networks:
   app_network:
     driver: bridge
