--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,18 +11,19 @@ jobs:
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v4
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          ecr: auto
-          logout: true
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
-      - name: Extract metadata (labels, tags, etc.) for Docker
+
+      - name: Extract metadata (labels, tags) for Docker
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: genqserve/citilyst-backend:latest
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
@@ -31,6 +32,7 @@ jobs:
           push: true
           tags: genqserve/citilyst-backend:latest
           labels: ${{ steps.meta.outputs.labels }}
+
   deploy:
     runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/main' }}
@@ -38,22 +40,44 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: copy file via ssh key
+
+      # Buat .env file dengan GitHub Secrets
+      - name: Create .env file
+        run: |
+          cat > .env << EOF
+          DATABASE_URL=${{ secrets.DATABASE_URL }}
+          REDIS_URL=${{ secrets.REDIS_URL }}
+          GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
+          GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
+          EOF
+
+      # Upload docker-compose.yml dan .env file ke server
+      - name: Copy files to server
         uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
-          source: "docker-compose.yml"
-          target: .
-      - name: run docker-compose
+          source: "docker-compose.yml,.env"
+          target: "/home/${{ secrets.USERNAME }}/citilyst-backend"
+          strip_components: 0
+
+      # Deploy ke server menggunakan environment variables
+      - name: Deploy to server
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           script: |
-            sudo docker compose down
-            sudo docker rmi -f $(docker images -q)
-            sudo docker compose pull
-            sudo docker compose up -d
+            cd /home/${{ secrets.USERNAME }}/citilyst-backend
+            # Stop existing containers
+            docker compose down || true
+            # Hapus image lama untuk menghindari penggunaan disk
+            docker image prune -af || true
+            # Pull latest image
+            docker compose pull
+            # Deploy dengan environment dari .env
+            docker compose up -d
+            # Verifikasi container berjalan
+            docker compose ps
