--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,8 @@ services:
       dockerfile: ./Dockerfile 
     ports:
       - "8000:8000"
-    environment:
-      - DATABASE_URL=${DATABASE_URL}
-      - REDIS_URL=${REDIS_URL}
-      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
-      - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
+    env_file:
+      - .env
     depends_on:
       - redis
     restart: always
