--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,9 @@ jobs:
       - name: Create .env file
         run: |
           cat > .env << EOF
+          PYTHONUNBUFFERED=1
+          PROJECT_NAME=${{ secrets.PROJECT_NAME }}
+          ENVIRONMENT=${{ secrets.ENVIRONMENT }}
           DATABASE_URL=${{ secrets.DATABASE_URL }}
           PGDATABASE=${{ secrets.PGDATABASE }}
           PGPORT=${{ secrets.PGPORT }}
@@ -60,8 +63,6 @@ jobs:
           MAIL_FROM=${{ secrets.MAIL_FROM }}
           MAIL_PORT=${{ secrets.MAIL_PORT }}
           MAIL_SERVER=${{ secrets.MAIL_SERVER }}
-          PYTHONUNBUFFERED=1
-          PROJECT_NAME=${{ secrets.PROJECT_NAME }}
           ONESIGNAL_APP_ID=${{ secrets.ONESIGNAL_APP_ID }}
           ONESIGNAL_API_KEY=${{ secrets.ONESIGNAL_API_KEY }}
           ONESIGNAL_OTP_TEMPLATE_ID=${{ secrets.ONESIGNAL_OTP_TEMPLATE_ID }}
