--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,6 +66,7 @@ jobs:
           ONESIGNAL_APP_ID=${{ secrets.ONESIGNAL_APP_ID }}
           ONESIGNAL_API_KEY=${{ secrets.ONESIGNAL_API_KEY }}
           ONESIGNAL_OTP_TEMPLATE_ID=${{ secrets.ONESIGNAL_OTP_TEMPLATE_ID }}
+          ALLOWED_ORIGINS=${{ secrets.ALLOWED_ORIGINS }}
           EOF
 
       # Buat folder remote jika belum ada
