fix(workflow): add Cloudinary secrets to .env file creation

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,6 +67,9 @@ jobs:
           ONESIGNAL_API_KEY=${{ secrets.ONESIGNAL_API_KEY }}
           ONESIGNAL_OTP_TEMPLATE_ID=${{ secrets.ONESIGNAL_OTP_TEMPLATE_ID }}
           ALLOWED_ORIGINS=${{ secrets.ALLOWED_ORIGINS }}
+          CLOUDINARY_CLOUD_NAME=${{ secrets.CLOUDINARY_CLOUD_NAME }}
+          CLOUDINARY_API_KEY=${{ secrets.CLOUDINARY_API_KEY }}
+          CLOUDINARY_API_SECRET=${{ secrets.CLOUDINARY_API_SECRET }}
           EOF
 
       # Buat folder remote jika belum ada
