--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - redis
       - n8n
     restart: always
+    volumes:
+      - /home/ubuntu/credentials:/credentials
     networks:
       - app_network
 
@@ -47,5 +49,6 @@ networks:
     driver: bridge
 
 volumes:
+
   n8n_data:
     external: true
