--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
       - N8N_HOST=n8n
       - N8N_PORT=5678
       - GENERIC_TIMEZONE=Asia/Jakarta
+      - ONESIGNAL_APP_ID=ecfccbe5-b876-4be9-b49f-5665f98b50d4
     volumes:
       - n8n_data:/home/node/.n8n
     networks:
