feat(n8n): update N8N_HOST and N8N_PROTOCOL for production environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,8 +35,9 @@ services:
     ports:
       - "5678:5678"
     environment:
-      - N8N_HOST=n8n
-      - N8N_PORT=5678
+      - N8N_HOST=n8n.genqserve.rekrutgenai.com
+      - N8N_PROTOCOL=https
+      # - N8N_PORT=5678
       - GENERIC_TIMEZONE=Asia/Jakarta
       - ONESIGNAL_APP_ID=ecfccbe5-b876-4be9-b49f-5665f98b50d4
     volumes:
