--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,22 +35,71 @@ services:
     ports:
       - "5678:5678"
     environment:
+      # Basic n8n Configuration
       - N8N_HOST=n8n.genqserve.rekrutgenai.com
       - N8N_PROTOCOL=https
-      # - N8N_PORT=5678
+      - N8N_PORT=443
+      - WEBHOOK_URL=https://n8n.genqserve.rekrutgenai.com
+      
+      # Security & Production Settings
+      - N8N_SECURE_COOKIE=true
+      - N8N_METRICS=true
+      - N8N_LOG_LEVEL=info
+      - N8N_LOG_OUTPUT=console
+      
+      # Timezone
       - GENERIC_TIMEZONE=Asia/Jakarta
+      - TZ=Asia/Jakarta
+      
+      # Execution Settings
+      - EXECUTIONS_PROCESS=main
+      - EXECUTIONS_MODE=queue
+      - EXECUTIONS_TIMEOUT=3600
+      - EXECUTIONS_TIMEOUT_MAX=7200
+      
+      # Database (Optional - for production you might want to use external DB)
+      - DB_TYPE=sqlite
+      - DB_SQLITE_DATABASE=/home/node/.n8n/database.sqlite
+      
+      # OAuth & Authentication Settings
+      - N8N_OAUTH_CALLBACK_URLS=https://n8n.genqserve.rekrutgenai.com/rest/oauth2-credential/callback,https://n8n.genqserve.rekrutgenai.com/rest/oauth1-credential/callback
+      
+      # Editor Base URL (important for OAuth)
+      - N8N_EDITOR_BASE_URL=https://n8n.genqserve.rekrutgenai.com
+      
+      # Push Connection (for real-time updates)
+      - N8N_PUSH_BACKEND=websocket
+      
+      # Custom App ID
       - ONESIGNAL_APP_ID=ecfccbe5-b876-4be9-b49f-5665f98b50d4
+      
+      # Performance Settings
+      - N8N_PAYLOAD_SIZE_MAX=16777216
+      - NODE_OPTIONS=--max-old-space-size=4096
+      
+      # Queue Settings (if using queue mode)
+      - QUEUE_BULL_REDIS_HOST=redis
+      - QUEUE_BULL_REDIS_PORT=6379
+      - QUEUE_HEALTH_CHECK_ACTIVE=true
+      
     volumes:
       - n8n_data:/home/node/.n8n
     networks:
       - app_network
     restart: always
+    depends_on:
+      - redis
+    healthcheck:
+      test: ["CMD-SHELL", "wget --quiet --tries=1 --spider http://localhost:5678/healthz || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
 
 networks:
   app_network:
     driver: bridge
 
 volumes:
-
   n8n_data:
     external: true
